--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,21 +1,21 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <aside id="notice"><%= notice %></aside>
+<% end %>
 
 <h1>Products</h1>
 
 <table>
-  <thead>
+  <tfoot>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Price</th>
-      <th colspan="3"></th>
+      <td colspan="3">
+        <%= link_to 'New product', new_product_path %>
+      </td>
     </tr>
-  </thead>
+  </tfoot>
 
   <tbody>
     <% @products.each do |product| %>
-      <tr>
+      <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
         <td><%= product.title %></td>
         <td><%= product.description %></td>
         <td><%= product.image_url %></td>
